--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "xasp"
-version = "0.1.4"
+version = "0.2.0"
 description = "Encodings for eXplainable Answer Set Programming"
 authors = ["Mario Alviano <mario.alviano@gmail.com>"]
 
@@ -11,6 +11,8 @@ rich = "^12.5.1"
 typeguard = "^2.13.3"
 valid8 = "^5.1.2"
 dateutils = "^0.6.12"
+igraph = "^0.10.2"
+cairocffi = "^1.4.0"
 
 [tool.poetry.dev-dependencies]
 coverage = "^6.5.0"
