--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,22 +1,23 @@
 [tool.poetry]
 name = "xasp"
-version = "0.5.16"
+version = "0.6.0"
 description = "API for eXplainable Answer Set Programming"
 authors = ["Mario Alviano <mario.alviano@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.10"
 typer = "^0.7.0"
-rich = "^12.5.1"
+rich = "^13.0.1"
 typeguard = "^2.13.3"
 valid8 = "^5.1.2"
 dateutils = "^0.6.12"
 igraph = "^0.10.2"
 cairocffi = "^1.4.0"
 Pillow = "^9.3.0"
+dumbo-asp = "^0.0.4"
 
 [tool.poetry.dev-dependencies]
-coverage = "^6.5.0"
+coverage = "^7.0.4"
 pytest = "^7.2.0"
 
 [build-system]
